# OpenCV-project

./: CMakeLists.txt  main.cpp
